SimpleServlet, Request doAction() 초안